--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "atelier-olfactive-backend",
+  "name": "atelier-olfactive-emailjs",
   "version": "1.0.0",
-  "description": "Backend pour la réception des réservations",
+  "description": "Système de réservation avec EmailJS",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.22.1",
-    "nodemailer": "^6.10.1"
+    "express": "^4.22.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "keywords": [
+    "reservation",
+    "emailjs",
+    "atelier",
+    "olfactive",
+    "nanawax"
+  ]
 }
